Set up basic component

--- a/index.html
+++ b/index.html
@@ -1,3 +1,26 @@
-<h1>hello riot</h1>
+<!DOCTYPE html>
+<html lang="ja" style="height: 590px; width: 390px;">
+  <head>
+    <title>CryptoViewer</title>
+  </head>
+  <style type="text/css">
+    body{
+      background: #F7F7F7;
+      margin: 0;
+      padding: 0;
+    }
+  </style>
+  <body>
 
+    <app></app>
+
+    <!-- load riot library -->
+    <script type="text/javascript" src="js/riot.csp.js"></script>
+    <!-- load tags -->
+    <script type="text/javascript" src="tags/app.js"></script>
+    <!-- mount component -->
+    <script type="text/javascript" src="js/main.js"></script>
+
+  </body>
+</html>
 
