Mark up basic component

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="ja" style="height: 590px; width: 390px;">
+<html lang="ja" style="height: 590px; width: 357px;">
   <head>
     <title>CryptoViewer</title>
+    <meta charset="utf-8"/>
   </head>
   <style type="text/css">
     body{
-      background: #F7F7F7;
+      background: #FFF;
       margin: 0;
       padding: 0;
     }
@@ -18,6 +19,9 @@
     <script type="text/javascript" src="js/riot.csp.js"></script>
     <!-- load tags -->
     <script type="text/javascript" src="tags/app.js"></script>
+    <script type="text/javascript" src="tags/top.js"></script>
+    <script type="text/javascript" src="tags/assets.js"></script>
+    <script type="text/javascript" src="tags/rate-lists.js"></script>
     <!-- mount component -->
     <script type="text/javascript" src="js/main.js"></script>
 
