--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="ja" style="height: 590px; width: 357px;">
+<html lang="ja" style="height: 380px; width: 250px;">
   <head>
     <title>CryptoViewer</title>
     <meta charset="utf-8"/>
   </head>
   <style type="text/css">
     body{
-      background: #FFF;
+      background: rgba(5,1,0,0.01);
       margin: 0;
       padding: 0;
     }
@@ -19,8 +19,6 @@
     <script type="text/javascript" src="js/riot.csp.js"></script>
     <!-- load tags -->
     <script type="text/javascript" src="tags/app.js"></script>
-    <script type="text/javascript" src="tags/top.js"></script>
-    <script type="text/javascript" src="tags/assets.js"></script>
     <script type="text/javascript" src="tags/rate-lists.js"></script>
     <!-- mount component -->
     <script type="text/javascript" src="js/main.js"></script>
