--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <!-- load riot library -->
     <script type="text/javascript" src="js/riot.csp.js"></script>
     <!-- load tags -->
-    <script type="text/javascript" src="tags/app.js"></script>
-    <script type="text/javascript" src="tags/rate-lists.js"></script>
+    <script type="text/javascript" src="build/app.js"></script>
+    <script type="text/javascript" src="build/rate-lists.js"></script>
     <!-- mount component -->
     <script type="text/javascript" src="js/main.js"></script>
 
